--- a/app/src/main/res/drawable/ic_pause.xml
+++ b/app/src/main/res/drawable/ic_pause.xml
@@ -7,6 +7,6 @@
     android:viewportHeight="24">
 
     <path
-        android:fillColor="#FF000000"
+        android:fillColor="#ff0000"
         android:pathData="M6,5h4v14H6zM14,5h4v14h-4z"/>
 </vector>
