--- a/app/src/main/res/drawable/ic_play.xml
+++ b/app/src/main/res/drawable/ic_play.xml
@@ -3,10 +3,9 @@
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
-    android:viewportHeight="24"
-    android:tint="#99000000">
+    android:viewportHeight="24">
 
     <path
-        android:fillColor="@android:color/white"
+        android:fillColor="#7DCA0A"
         android:pathData="M8,5v14l11,-7z"/>
 </vector>
