--- a/app/src/main/res/layout/activity_main_epsilon.xml
+++ b/app/src/main/res/layout/activity_main_epsilon.xml
@@ -1201,6 +1201,11 @@
                     </LinearLayout>
 
                     <TextView
+                        android:id="@+id/robot_status_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
+                    <TextView
                         android:id="@+id/digital_input_text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
