--- a/app/src/main/res/drawable/button_option_selector.xml
+++ b/app/src/main/res/drawable/button_option_selector.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimary"/>
+            <solid android:color="@color/selected_axis_color"/>
             <corners android:radius="4dp"/>
         </shape>
     </item>
