--- a/app/src/main/res/layout/activity_main_epsilon.xml
+++ b/app/src/main/res/layout/activity_main_epsilon.xml
@@ -1331,8 +1331,7 @@
                     android:padding="4dp"
                     android:background="@android:color/white"
                     android:clickable="false"
-                    android:focusable="false"
-                    android:enabled="false" />
+                    android:focusable="false" />
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
