--- a/app/src/main/res/layout/activity_count.xml
+++ b/app/src/main/res/layout/activity_count.xml
@@ -10,13 +10,12 @@
     <LinearLayout
         android:id="@+id/main_container"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="80dp"
         android:orientation="vertical"
         android:padding="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/add_block_btn">
+        app:layout_constraintEnd_toEndOf="parent">
 
         <LinearLayout
             android:id="@+id/task_selector"
@@ -29,7 +28,6 @@
             android:paddingStart="8dp"
             android:baselineAligned="false">
 
-            <!-- Кнопка Drag Mode слева -->
             <ImageButton
                 android:id="@+id/drag_mode"
                 android:layout_width="36dp"
@@ -47,13 +45,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:tabMode="scrollable"
-                app:tabIndicatorColor="@android:color/black"
-                app:tabTextColor="@android:color/darker_gray"
-                app:tabSelectedTextColor="@android:color/black"
-                app:tabRippleColor="@android:color/transparent" />
+                style="@style/CenteredTabText"
+                android:visibility="visible" />
 
-            <!-- Кнопка "Назад" справа -->
             <ImageButton
                 android:id="@+id/btn_back"
                 android:layout_width="46dp"
@@ -65,6 +59,192 @@
                 android:padding="8dp"
                 android:src="@drawable/ic_back" />
         </LinearLayout>
+    </LinearLayout>
+
+    <!-- Контейнер с управляющими элементами -->
+    <LinearLayout
+        android:id="@+id/controls_container"
+        android:layout_width="727dp"
+        android:layout_height="309dp"
+        android:orientation="vertical"
+        android:padding="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/main_container"
+        app:layout_constraintVertical_bias="1.0">
+
+        <!-- Группа точек -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <!-- Точка 1 -->
+                <Button
+                    android:id="@+id/get_pos_btn1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Начало"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/pos1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:maxLines="3"
+                    android:text="X=0, Y=0\n Z=0, Rx=0\n Ry=0, Rz=0"
+                    android:textSize="14sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <!-- Точка 2 -->
+                <Button
+                    android:id="@+id/get_pos_btn2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Среднее"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/pos2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:maxLines="3"
+                    android:text="X=0, Y=0\n Z=0, Rx=0\n Ry=0, Rz=0"
+                    android:textSize="14sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <!-- Точка 3 -->
+                <Button
+                    android:id="@+id/get_pos_btn3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Конец"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/pos3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:maxLines="3"
+                    android:text="X=0, Y=0\n Z=0, Rx=0\n Ry=0, Rz=0"
+                    android:textSize="14sp" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <!-- Группа кнопок управления -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/get_pos_btn4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Отход" />
+
+                <TextView
+                    android:id="@+id/pos4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="X=0, Y=0\n Z=0, Rx=0\n Ry=0, Rz=0"
+                    android:textSize="14sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/get_pos_btn5"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Подход" />
+
+                <TextView
+                    android:id="@+id/pos5"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="X=0, Y=0\n Z=0, Rx=0\n Ry=0, Rz=0"
+                    android:textSize="14sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/get_pos_btn6"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Дом. положение" />
+
+                <TextView
+                    android:id="@+id/pos6"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="X=0, Y=0\n Z=0, Rx=0\n Ry=0, Rz=0"
+                    android:textSize="14sp" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <!-- Кнопка сохранения -->
+        <Button
+            android:id="@+id/save_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Сохранить" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/dropdown_menu"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="#FFFFFF"
+        android:orientation="vertical"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/main_container"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <ScrollView
             android:layout_width="match_parent"
@@ -79,108 +259,14 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"/>
         </ScrollView>
-        <!--        <ScrollView-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="0dp"-->
-<!--            android:layout_weight="1"-->
-<!--            android:fillViewport="true">-->
 
-<!--            <LinearLayout-->
-<!--                android:id="@+id/dynamic_task_container"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:orientation="vertical"-->
-<!--                android:divider="@android:drawable/divider_horizontal_dark"-->
-<!--                android:showDividers="middle"/>-->
-<!--        </ScrollView>-->
+        <!-- Кнопка добавления нового элемента -->
+        <Button
+            android:id="@+id/add_block_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="+ Добавить элемент"
+            app:layout_constraintTop_toBottomOf="@id/main_container"
+            app:layout_constraintBottom_toTopOf="@id/task_container"/>
     </LinearLayout>
-
-    <!-- Кнопка добавления нового элемента -->
-    <Button
-        android:id="@+id/add_block_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="+ Добавить элемент"
-        app:layout_constraintTop_toBottomOf="@id/main_container"
-        app:layout_constraintBottom_toTopOf="@id/buttons_container"/>
-
-    <!-- Контейнер кнопок и текстов внизу -->
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/buttons_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        app:layout_constraintBottom_toBottomOf="parent">
-
-        <!-- Точка 1 -->
-        <Button
-            android:id="@+id/get_pos_btn1"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:text="Точка 1"
-            android:textSize="14sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
-
-        <TextView
-            android:id="@+id/pos1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:text="X=0, Y=0\n Z=0, Rx=0\n Ry=0, Rz=0"
-            android:textSize="8sp"
-            android:maxLines="3"
-            app:layout_constraintStart_toEndOf="@id/get_pos_btn1"
-            app:layout_constraintBottom_toBottomOf="@id/get_pos_btn1"/>
-
-        <!-- Точка 2 -->
-        <Button
-            android:id="@+id/get_pos_btn2"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp"
-            android:text="Точка 2"
-            android:textSize="14sp"
-            app:layout_constraintStart_toEndOf="@id/pos1"
-            app:layout_constraintBottom_toBottomOf="parent"/>
-
-        <TextView
-            android:id="@+id/pos2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:text="X=0, Y=0\n Z=0, Rx=0\n Ry=0, Rz=0"
-            android:textSize="8sp"
-            android:maxLines="3"
-            app:layout_constraintStart_toEndOf="@id/get_pos_btn2"
-            app:layout_constraintBottom_toBottomOf="@id/get_pos_btn2"/>
-
-        <!-- Точка 3 -->
-        <Button
-            android:id="@+id/get_pos_btn3"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp"
-            android:text="Точка 3"
-            android:textSize="14sp"
-            app:layout_constraintStart_toEndOf="@id/pos2"
-            app:layout_constraintBottom_toBottomOf="parent"/>
-
-        <TextView
-            android:id="@+id/pos3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:text="X=0, Y=0\n Z=0, Rx=0\n Ry=0, Rz=0"
-            android:textSize="8sp"
-            android:maxLines="3"
-            app:layout_constraintStart_toEndOf="@id/get_pos_btn3"
-            app:layout_constraintBottom_toBottomOf="@id/get_pos_btn3"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
