--- a/app/src/main/res/layout/task_element.xml
+++ b/app/src/main/res/layout/task_element.xml
@@ -24,7 +24,7 @@
         <!-- Spinner (Тип) -->
         <Spinner
             android:id="@+id/spinner_type"
-            android:layout_width="100dp"
+            android:layout_width="160dp"
             android:layout_height="40dp"
             android:layout_marginEnd="4dp"
             android:layout_marginRight="4dp"
@@ -33,53 +33,53 @@
         <!-- Ширина -->
         <EditText
             android:id="@+id/input_width"
-            android:layout_width="70dp"
+            android:layout_width="85dp"
             android:layout_height="40dp"
             android:layout_marginEnd="4dp"
             android:layout_marginRight="4dp"
-            android:hint="Шир"
-            android:textSize="12sp"
+            android:hint="Ширина"
+            android:textSize="14sp"
             android:inputType="numberDecimal" />
 
         <!-- Высота -->
         <EditText
             android:id="@+id/input_height"
-            android:layout_width="70dp"
+            android:layout_width="85dp"
             android:layout_height="40dp"
             android:layout_marginEnd="4dp"
             android:layout_marginRight="4dp"
-            android:hint="Выс"
-            android:textSize="12sp"
+            android:hint="Высота"
+            android:textSize="14sp"
             android:inputType="numberDecimal" />
 
         <!-- Шаг -->
         <EditText
             android:id="@+id/input_step"
-            android:layout_width="70dp"
+            android:layout_width="85dp"
             android:layout_height="40dp"
             android:layout_marginEnd="4dp"
             android:layout_marginRight="4dp"
             android:hint="Шаг"
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:inputType="numberDecimal" />
 
         <!-- Скорость -->
         <EditText
             android:id="@+id/input_speed"
-            android:layout_width="70dp"
+            android:layout_width="85dp"
             android:layout_height="40dp"
             android:layout_marginEnd="4dp"
             android:layout_marginRight="4dp"
-            android:hint="Ск"
-            android:textSize="12sp"
+            android:hint="Скорость"
+            android:textSize="14sp"
             android:inputType="numberDecimal" />
 
         <!-- Кнопка -->
         <Button
             android:id="@+id/btn_action"
-            android:layout_width="60dp"
+            android:layout_width="90dp"
             android:layout_height="40dp"
             android:text="Тест"
-            android:textSize="12sp" />
+            android:textSize="14sp" />
     </LinearLayout>
 </HorizontalScrollView>
