--- a/app/src/main/res/layout/activity_count.xml
+++ b/app/src/main/res/layout/activity_count.xml
@@ -260,6 +260,14 @@
                 android:layout_weight="1"/>
         </ScrollView>
 
+        <Button
+            android:id="@+id/go_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Запуск"
+            app:layout_constraintTop_toBottomOf="@id/main_container"
+            app:layout_constraintBottom_toTopOf="@id/task_container"/>
+
         <!-- Кнопка добавления нового элемента -->
         <Button
             android:id="@+id/add_block_btn"
