--- a/app/src/main/res/layout/task_element.xml
+++ b/app/src/main/res/layout/task_element.xml
@@ -61,7 +61,8 @@
             android:layout_marginRight="4dp"
             android:hint="Шаг"
             android:textSize="14sp"
-            android:inputType="numberDecimal" />
+            android:inputType="numberDecimal"
+            android:text="5"/>
 
         <!-- Скорость -->
         <EditText
@@ -72,7 +73,8 @@
             android:layout_marginRight="4dp"
             android:hint="Скорость"
             android:textSize="14sp"
-            android:inputType="numberDecimal" />
+            android:inputType="numberDecimal"
+            android:text="50"/>
 
         <!-- Кнопка -->
         <Button
