--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,16 +11,32 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="CenteredTabText" parent="Widget.Design.TabLayout">
-        <item name="tabGravity">center</item>
-        <item name="tabMode">fixed</item>
-        <item name="tabIndicatorColor">@android:color/black</item>
-        <item name="tabTextColor">@android:color/darker_gray</item>
-        <item name="tabSelectedTextColor">@android:color/black</item>
-        <item name="tabTextAppearance">@style/TabTextCentered</item>
-    </style>
+<!--    <style name="CenteredTabText" parent="Widget.Design.TabLayout">-->
+<!--        <item name="tabGravity">center</item>-->
+<!--        <item name="tabMode">fixed</item>-->
+<!--        <item name="tabIndicatorColor">@android:color/black</item>-->
+<!--        <item name="tabTextColor">@android:color/darker_gray</item>-->
+<!--        <item name="tabSelectedTextColor">@android:color/black</item>-->
+<!--        <item name="tabTextAppearance">@style/TabTextCentered</item>-->
+<!--    </style>-->
 
     <style name="TabTextCentered" parent="TextAppearance.Design.Tab">
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="CenteredTabText" parent="Widget.MaterialComponents.TabLayout">
+        <item name="tabIndicatorColor">#2196F3</item>
+        <item name="tabSelectedTextColor">#000000</item>
+        <item name="tabTextColor">#888888</item>
+        <item name="tabGravity">center</item>
+        <item name="tabMode">fixed</item>
+        <item name="tabIndicatorHeight">4dp</item>
+        <item name="tabTextAppearance">@style/TabTextStyle</item>
+    </style>
+
+    <style name="TabTextStyle" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">bold</item>
         <item name="android:gravity">center</item>
     </style>
 </resources>
