--- a/app/src/main/res/layout/activity_main_epsilon.xml
+++ b/app/src/main/res/layout/activity_main_epsilon.xml
@@ -1200,6 +1200,16 @@
                         </LinearLayout>
                     </LinearLayout>
 
+                    <Spinner
+                        android:id="@+id/user"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    <Spinner
+                        android:id="@+id/tool"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
                     <TextView
                         android:id="@+id/robot_status_text"
                         android:layout_width="match_parent"
