--- a/app/src/main/res/layout/activity_main_epsilon.xml
+++ b/app/src/main/res/layout/activity_main_epsilon.xml
@@ -1200,34 +1200,48 @@
                         </LinearLayout>
                     </LinearLayout>
 
-                    <Spinner
-                        android:id="@+id/user"
+                    <LinearLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content" >
 
-                    <Spinner
-                        android:id="@+id/tool"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        <Spinner
+                            android:id="@+id/user"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+
+                        <Spinner
+                            android:id="@+id/tool"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                    </LinearLayout>
 
                     <TextView
                         android:id="@+id/robot_status_text"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
-
-                    <TextView
-                        android:id="@+id/digital_input_text"
-                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="6dp"
-                        android:text="Digital input:" />
+                        android:visibility="gone"/>
 
-                    <TextView
-                        android:id="@+id/digital_output_text"
-                        android:layout_width="match_parent"
+                    <LinearLayout
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="6dp"
-                        android:text="Digital output:" />
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/digital_input_text"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="6dp"
+                            android:visibility="gone"
+                            android:text="Digital input:" />
+
+                        <TextView
+                            android:id="@+id/digital_output_text"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="6dp"
+                            android:visibility="gone"
+                            android:text="Digital output:" />
+                    </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
 
